--- a/utilities/src/main/res/drawable/button_toggle_light.xml
+++ b/utilities/src/main/res/drawable/button_toggle_light.xml
@@ -14,7 +14,7 @@
 -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/button_selected" android:state_checked="true" />
     <item android:drawable="@drawable/button_pressed" android:state_pressed="true" />
-    <item android:drawable="@drawable/button_normal" android:state_focused="true" />
     <item android:drawable="@drawable/button_normal" />
 </selector>
