--- a/utilities/src/main/res/layout/activity_about.xml
+++ b/utilities/src/main/res/layout/activity_about.xml
@@ -24,7 +24,7 @@
                 android:paddingTop="10dp">
 
                 <TextView
-                    android:id="@+id/appname"
+                    android:id="@+id/textView_app_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -37,10 +37,47 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/textView_version"
+                    android:gravity="center"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/amber_900" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:paddingTop="20dp"
                     android:text="@string/app_description"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:id="@+id/textView_app_description" />
+            </LinearLayout>
+
+            <View style="@style/view_divider_dark" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="3"
+                android:orientation="horizontal"
+                android:paddingBottom="10dp"
+                android:paddingTop="50dp">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:singleLine="false"
+                    android:text="Web Page" />
+
+                <TextView
+                    android:id="@+id/textView_url_webpage"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:autoLink="web"
+                    android:gravity="center_vertical"
+                    android:singleLine="false"
+                    android:text="@string/url_webpage" />
+
             </LinearLayout>
 
             <View style="@style/view_divider_dark" />
@@ -58,16 +95,45 @@
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:singleLine="false"
-                    android:text="Web Link" />
+                    android:text="Releases" />
 
                 <TextView
+                    android:id="@+id/textView_url_release"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:autoLink="web"
                     android:gravity="center_vertical"
                     android:singleLine="false"
-                    android:text="@string/app_url" />
+                    android:text="@string/url_release" />
+
+            </LinearLayout>
+
+            <View style="@style/view_divider_dark" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="3"
+                android:orientation="horizontal"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:singleLine="false"
+                    android:text="Source Code" />
+
+                <TextView
+                    android:id="@+id/textView_url_sourcecode"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:autoLink="web"
+                    android:gravity="center_vertical"
+                    android:singleLine="false"
+                    android:text="@string/url_sourcecode" />
 
             </LinearLayout>
 
@@ -96,7 +162,8 @@
                     android:autoLink="email"
                     android:gravity="center_vertical"
                     android:singleLine="false"
-                    android:text="@string/app_developer" />
+                    android:text="@string/app_developer"
+                    android:id="@+id/textView_app_developer" />
             </LinearLayout>
 
         </LinearLayout>
