--- a/utilities/src/main/res/values/colors.xml
+++ b/utilities/src/main/res/values/colors.xml
@@ -17,9 +17,44 @@
     <color name="teal_a200">#64FFDA</color>
     <color name="teal_a400">#1DE9B6</color>
     <color name="teal_a700">#00BFA5</color>
-    <color name="WHITE">#ffffff</color>
     <color name="yellow_700">#FBC02D</color>
     <color name="yellow_900">#F57F17</color>
     <color name="lightgreen_700">#689F38</color>
     <color name="lightgreen_900">#33691E</color>
+
+    <color name="indigo_50">#E8EAF6</color>
+    <color name="indigo_100">#C5CAE9</color>
+    <color name="indigo_200">#9FA8DA</color>
+    <color name="indigo_300">#7986CB</color>
+    <color name="indigo_400">#5C6BC0</color>
+    <color name="indigo_500">#3F51B5</color>
+    <color name="indigo_600">#3949AB</color>
+    <color name="indigo_700">#303F9F</color>
+    <color name="indigo_800">#283593</color>
+    <color name="indigo_900">#1A237E</color>
+    <color name="indigo_A100">#8C9EFF</color>
+    <color name="indigo_A200">#536DFE</color>
+    <color name="indigo_A400">#3D5AFE</color>
+    <color name="indigo_A700">#304FFE</color>
+
+    <color name="pink_50">#FCE4EC</color>
+    <color name="pink_100">#F8BBD0</color>
+    <color name="pink_200">#F48FB1</color>
+    <color name="pink_300">#F06292</color>
+    <color name="pink_400">#EC407A</color>
+    <color name="pink_500">#E91E63</color>
+    <color name="pink_600">#D81B60</color>
+    <color name="pink_700">#C2185B</color>
+    <color name="pink_800">#AD1457</color>
+    <color name="pink_900">#880E4F</color>
+    <color name="pink_A100">#FF80AB</color>
+    <color name="pink_A200">#FF4081</color>
+    <color name="pink_A400">#F50057</color>
+    <color name="pink_A700">#C51162</color>
+
+
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+
+
 </resources>
