--- a/utilities/src/main/res/values/styles_teal_dark.xml
+++ b/utilities/src/main/res/values/styles_teal_dark.xml
@@ -1,24 +1,27 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppThemeDark" parent="@android:style/Theme.Holo"
-        >
+    <style name="AppThemeDark" parent="@android:style/Theme.Holo">
         <item name="android:textColorSecondary">@color/teal_a100</item>
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
         <item name="android:actionBarStyle">@style/actionbar_dark</item>
         <item name="android:listSeparatorTextViewStyle">@style/PreferenceListHeader</item>
     </style>
+
     <style name="AboutDialog" parent="@android:style/Theme.Dialog">
         <item name="android:textColor">@color/teal_a100</item>
     </style>
+
     <style name="actionbar_dark" parent="@android:style/Widget.Holo.ActionBar">
-    <item name="android:background">@color/teal_800</item>
-</style>
+        <item name="android:background">@color/teal_800</item>
+    </style>
+
     <style name="textview_heading1_dark">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
         <item name="android:textColor">@color/teal_a700</item>
     </style>
+
     <style name="textview_heading2_dark">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -31,7 +34,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
-        <item name="android:textColor">@color/WHITE</item>
+        <item name="android:textColor">@color/white</item>
 
     </style>
 
@@ -50,7 +53,7 @@
     </style>
 
     <style name="PreferenceListHeader" parent="Widget.TextView.ListSeparator">
-        <item name="android:textColor">@color/WHITE</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/teal_900</item>
         <item name="android:textStyle">bold</item>
         <item name="android:paddingTop">6dp</item>
