--- a/utilities/src/main/res/values/styles_teal_light.xml
+++ b/utilities/src/main/res/values/styles_teal_light.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppThemeTealLight" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="app_theme_teal_light" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/teal_500</item>
         <item name="colorPrimaryDark">@color/teal_700</item>
@@ -8,21 +8,14 @@
         <item name="android:textColor">@color/primary_text_color_selector</item>
         <item name="android:textColorPrimary">@color/teal_700</item>
         <item name="android:textColorSecondary">@color/secondary_text_color_selector</item>
-        <item name="android:listSeparatorTextViewStyle">@style/AppThemeTealLight.PreferenceListHeader</item>
+        <item name="android:listSeparatorTextViewStyle">@style/app_theme_teal_light.preference_list_title</item>
         <item name="android:padding">0dp</item>
+        <item name="button">@style/app_theme_teal_light.button</item>
+        <item name="text_view_primary_color">@style/app_theme_teal_light.text_view_primary_color</item>
+        <item name="text_view_title">@style/app_theme_teal_light.text_view_title</item>
     </style>
 
-    <style name="AppThemeTealLight.textView_Header_Teal_Center">
-        <item name="android:padding">5dp</item>
-        <item name="android:background">@color/teal_700</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textAppearance">@android:style/TextAppearance.Small</item>
-        <item name="android:topLeftRadius">5dp</item>
-        <item name="android:topRightRadius">5dp</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-    <style name="AppThemeTealLight.textView_Header_Teal_Left_Round">
+    <style name="app_theme_teal_light.text_view_title">
         <item name="android:padding">5dp</item>
         <item name="android:background">@color/teal_700</item>
         <item name="android:textColor">@color/white</item>
@@ -30,11 +23,16 @@
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
     </style>
-    <style name="AppThemeTealLight.view_Divider_Teal">
+    <style name="app_theme_teal_light.text_view_primary_color">
+        <item name="android:textColor">@color/teal_A700</item>
+        <item name="android:textAppearance">@android:style/TextAppearance.Small</item>
+    </style>
+
+    <style name="app_theme_teal_light.view_divider">
         <item name="android:background">@color/teal_700</item>
     </style>
 
-    <style name="AppThemeTealLight.PreferenceListHeader" >
+    <style name="app_theme_teal_light.preference_list_title" >
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
@@ -43,7 +41,9 @@
         <item name="android:padding">10dp</item>
         <item name="android:background">@color/teal_700</item>
      </style>
-    <style name="AppThemeTealLight.Button_Normal">
+    <style name="app_theme_teal_light.button">
         <item name="android:background">@drawable/button_teal</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">bold</item>
     </style>
  </resources>
