--- a/utilities/src/main/res/layout/activity_copyright.xml
+++ b/utilities/src/main/res/layout/activity_copyright.xml
@@ -3,21 +3,14 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/buttonAboutOk"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="false"
-        android:background="@drawable/button_teal"
-        android:layout_weight="0"
-        android:text="Ok"
-        android:layout_marginTop="10dp" />
+    <include
+        android:id="@+id/layout_one_button"
+        layout="@layout/layout_one_button" />
 
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/buttonAboutOk"
+        android:layout_above="@id/layout_one_button"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
         <LinearLayout
