--- a/utilities/src/main/res/layout/layout_one_button.xml
+++ b/utilities/src/main/res/layout/layout_one_button.xml
@@ -5,12 +5,11 @@
     android:orientation="horizontal"
     android:weightSum="1">
     <Button
-        android:id="@+id/button_cancel"
+        android:id="@+id/button_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="@drawable/button_teal"
-        android:text="Cancel"
         android:textStyle="bold" />
 </LinearLayout>
 
