--- a/utilities/src/main/res/layout/layout_three_button.xml
+++ b/utilities/src/main/res/layout/layout_three_button.xml
@@ -3,7 +3,7 @@
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:orientation="horizontal"
-    android:weightSum="2">
+    android:weightSum="3">
 
 
     <Button
@@ -16,6 +16,13 @@
 
     <Button
         android:id="@+id/button_2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/button_teal"
+        android:textStyle="bold" />
+    <Button
+        android:id="@+id/button_3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
