notification files updated

--- a/utilities/src/main/res/values/colors.xml
+++ b/utilities/src/main/res/values/colors.xml
@@ -93,7 +93,7 @@
     <color name="red_400">#EF5350</color>
     <color name="red_500">#F44336</color>
     <color name="red_600">#E53935</color>
-    <color name="red_700">#D32F2F</color>
+    <color name="red_700">#d32f2f</color>
     <color name="red_800">#C62828</color>
     <color name="red_900">#b71c1c</color>
     <color name="red_A100">#FF8A80</color>
