--- a/utilities/src/main/res/values/colors.xml
+++ b/utilities/src/main/res/values/colors.xml
@@ -52,13 +52,13 @@
     <color name="lightblue_400">#29B6F6</color>
     <color name="lightblue_500">#03A9F4</color>
     <color name="lightblue_600">#039BE5</color>
-    <color name="lightblue_700">#0288D1</color>
+    <color name="lightblue_700">#0288d1</color>
     <color name="lightblue_800">#0277BD</color>
     <color name="lightblue_900">#01579B</color>
     <color name="lightblue_A100">#80D8FF</color>
     <color name="lightblue_A200">#40C4FF</color>
     <color name="lightblue_A400">#00B0FF</color>
-    <color name="lightblue_A700">#0091EA</color>
+    <color name="lightblue_A700">#0091ea</color>
 
     <color name="deeporange_50">#FBE9E7</color>
     <color name="deeporange_100">#FFCCBC</color>
@@ -78,9 +78,9 @@
     <color name="grey_50">#FAFAFA</color>
     <color name="grey_100">#F5F5F5</color>
     <color name="grey_200">#EEEEEE</color>
-    <color name="grey_300">#E0E0E0</color>
-    <color name="grey_400">#BDBDBD</color>
-    <color name="grey_500">#9E9E9E</color>
+    <color name="grey_300">#e0e0e0</color>
+    <color name="grey_400">#bdbdbd</color>
+    <color name="grey_500">#9e9e9e</color>
     <color name="grey_600">#757575</color>
     <color name="grey_700">#616161</color>
     <color name="grey_800">#424242</color>
@@ -91,7 +91,7 @@
     <color name="red_200">#EF9A9A</color>
     <color name="red_300">#E57373</color>
     <color name="red_400">#EF5350</color>
-    <color name="red_500">#F44336</color>
+    <color name="red_500">#f44336</color>
     <color name="red_600">#E53935</color>
     <color name="red_700">#d32f2f</color>
     <color name="red_800">#C62828</color>
@@ -99,7 +99,7 @@
     <color name="red_A100">#FF8A80</color>
     <color name="red_A200">#FF5252</color>
     <color name="red_A400">#FF1744</color>
-    <color name="red_A700">#D50000</color>
+    <color name="red_A700">#d50000</color>
 
     <color name="amber_900">#FF6F00</color>
     <color name="yellow_700">#FBC02D</color>
@@ -107,6 +107,6 @@
     <color name="lightgreen_700">#689F38</color>
     <color name="lightgreen_900">#33691E</color>
 
-    <color name="white">#FFFFFF</color>
+    <color name="white">#ffffff</color>
     <color name="black">#000000</color>
 </resources>
