size of the directory - bug fixed

--- a/utilities/src/main/res/values/colors.xml
+++ b/utilities/src/main/res/values/colors.xml
@@ -65,7 +65,7 @@
     <color name="deeporange_200">#FFAB91</color>
     <color name="deeporange_300">#FF8A65</color>
     <color name="deeporange_400">#FF7043</color>
-    <color name="deeporange_500">#FF5722</color>
+    <color name="deeporange_500">#ff5722</color>
     <color name="deeporange_600">#F4511E</color>
     <color name="deeporange_700">#E64A19</color>
     <color name="deeporange_800">#D84315</color>
